# shacl-rs

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: canonicalization.rs  components.rs  context.rs  lib.rs  named_nodes.rs  optimize.rs  parser.rs  report.rs  shape.rs  test_utils.rs  types.rs  validate.rs
lib/src/components/: cardinality.rs  logical.rs  other.rs  property_pair.rs  shape_based.rs  sparql.rs  string_based.rs  value_range.rs  value_type.rs
lib/src/context/: graphviz.rs  model.rs  validation.rs
lib/src/inference/: mod.rs
lib/src/model/: rules.rs  shapes.rs  templates.rs
lib/src/model/components/: mod.rs  sparql.rs
lib/src/parser/: component_registry.rs  components.rs  mod.rs  rules.rs
lib/src/runtime/: component.rs  engine.rs
lib/src/runtime/validators/: logical.rs  other.rs  property_pair.rs  shape_based.rs  sparql.rs  string_based.rs  value_range.rs  value_type.rs
lib/src/sparql/: mod.rs
lib/tests/: af_custom.rs  af_targets.rs  manifest_test.rs
lib/tests/test-suite/: manifest.ttl
lib/tests/test-suite/advanced/: manifest.ttl
lib/tests/test-suite/advanced/core/: manifest.ttl
lib/tests/test-suite/advanced/expression/: booleans-001.test.ttl  manifest.ttl
lib/tests/test-suite/advanced/function/: manifest.ttl  simpleSPARQLFunction.test.ttl
lib/tests/test-suite/advanced/rules/: manifest.ttl
lib/tests/test-suite/advanced/shapedefs/: anon-shape-001.test.ttl  anon-shape-002.test.ttl  manifest.ttl
lib/tests/test-suite/core/: manifest.ttl
lib/tests/test-suite/core/misc/: manifest.ttl  (+5 more)
lib/tests/test-suite/sparql/: manifest.ttl
(+250 files in other folders)
